AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS = libcec-daemon
libcec_daemon_SOURCES = src/accumulator.hpp \
                        src/hdmi.cpp \
                        src/hdmi.h \
                        src/libcec.cpp \
                        src/libcec.h \
                        src/main.cpp \
                        src/main.h \
                        src/uinput.cpp \
                        src/uinput.h
